--- a/Catalog.API/appsettings.json
+++ b/Catalog.API/appsettings.json
@@ -1,6 +1,6 @@
 {
-  "ConnectionStrings": { 
-    "ProductConnection": "Server=localhost;Database=ProductDb;User Id=sa;Password=123456;"
+  "ConnectionStrings": {
+    "ProductConnection": "Server=TITAN01;Database=DFStore_Debug;Integrated Security=true;"
   },
   "Logging": {
     "LogLevel": {
